modify: `Permissions` fix: Bugs