@@ -7,6 +7,7 @@ import org.bukkit.inventory.ItemStack;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 import static net.starly.defaultkit.DefaultKitMain.config;
 
@@ -16,7 +17,7 @@ public class DefaultKitData {
     }
 
     public List<ItemStack> getKit() {
-        return Arrays.stream(config.getInventory("defaultkit").getContents()).filter(Objects::nonNull).toList();
+        return Arrays.stream(config.getInventory("defaultkit").getContents()).filter(Objects::nonNull).collect(Collectors.toList());
     }
 
     public void setKit(Inventory inv) {
